# rusty-handlebars

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
derive/: Cargo.toml  README.md
derive/src/: lib.rs
examples/: Cargo.toml
examples/src/: main.rs
examples/templates/: email.hbs  index.hbs  lookups.hbs  map.hbs  more-involved.hbs  very-simple.hbs  with-options.hbs  wrapper.hbs
parser/: Cargo.toml  README.md
parser/src/: block.rs  build_helper.rs  compiler.rs  error.rs  expression.rs  expression_tokenizer.rs  lib.rs  optimizer.rs
src/: as_bool.rs  lib.rs
