[workspace]
members = [
  "derive",
  "parser",
  "examples"
]

[workspace.dependencies]
regex = "1.11.1"
minify-html = "0.15.0"

[package]
name = "rusty-handlebars"
version = "0.1.8"
edition = "2021"

[dependencies]
rusty-handlebars-derive = { path = "derive", version = "0.1.8"}
rusty-handlebars-parser = { path = "parser", version = "0.1.8", optional = true }

[features]
parser = ["dep:rusty-handlebars-parser"]
minify-html = ["rusty-handlebars-parser?/minify-html"]