[workspace]
members = [
  "derive",
  "parser",
  "examples"
]

[workspace.dependencies]
regex = "1.11.1"
minify-html = "0.15.0"

[package]
name = "rusty-handlebars"
version = "0.1.0"
edition = "2021"
description = "Fast compile time handlebars template engine for Rust"
authors = ["Jerome Johnson <nosnhoj.emorej@gmail.com>"]
license = "MIT"
repository = "https://github.com/h-i-v-e/rusty-handlebars"
license-file = "LICENSE.txt"
keywords = ["handlebars", "template", "engine"]
categories = ["template-engine", "compilers"]

[dependencies]
rusty-handlebars-derive = { path = "derive", version = "0.1.0"}
rusty-handlebars-parser = { path = "parser", version = "0.1.0", optional = true }

[features]
parser = ["dep:rusty-handlebars-parser"]
minify-html = ["rusty-handlebars-parser?/minify-html"]