[package]
name = "rusty-handlebars-derive"
version = "0.1.0"
edition = "2021"
description = "Derive macros for the rusty-handlebars template engine"
authors.workspace = true
license.workspace = true
repository.workspace = true
license-file = "../LICENSE.txt"

[lib]
proc-macro = true

[dependencies]
minify-html = {workspace = true, optional = true}
proc-macro2 = "1.0.36"
quote = "1.0.15"
regex.workspace = true
rusty-handlebars-parser = {path = "../parser", version = "0.1.0"}
syn = {version = "^2.0.0", features = ["full"]}
toml = "0.8.19"

[features]
minify-html = ["dep:minify-html", "rusty-handlebars-parser/minify-html"]
default = ["minify-html"]