[package]
name = "rusty-handlebars-parser"
version = "0.1.1"
edition = "2021"
description = "Compiler for the rusty-handlebars template engine"
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["handlebars", "template", "engine"]
categories = ["template-engine", "compilers"]

[dependencies]
regex.workspace = true
minify-html = {workspace = true, optional = true}

[features]
minify-html = ["dep:minify-html"]
default = ["minify-html"]